# introductory_maths

./: .gitignore  README.md  pyproject.toml
03_scripts/: 01_algebra-revision.Rmd  01_geometry-revision.Rmd  01_geometry-revision.md  01_matrices_introduction.Rmd  01_matrices_introduction.html  01_matrices_introduction.md  01_sets-introduction.Rmd  01_sets-introduction.md  02_matrices_basic-algebra.Rmd  02_matrices_basic-algebra.md  02_sets-introduction.md  02_vectors-cosine-similarity-matrix.Rmd  02_vectors-geometry-revision.Rmd  02_vectors-geometry-revision.md  02_vectors-introduction.Rmd  02_vectors-introduction.md  02_vectors-usages.Rmd  02_vectors-usages.md  03_matrices-introduction.Rmd  03_matrices-introduction.md  03_matrices_determinants-minor-and-adjoint.Rmd  03_matrices_determinants-minor-and-adjoint.md  03_vectors-introduction.Rmd  03_vectors-introduction.md  04_matrices-introduction.Rmd  04_matrices-introduction.md  10_algebra_inroduction.Rmd  10_algebra_inroduction.md  10_algebra_introduction.Rmd  10_algebra_introduction.md
tutorials/: 02_sets-introduction.Rmd  04_matrices-introduction.Rmd  04_matrices-introduction.md  05_calculus-derivatives.Rmd  05_calculus-derivatives.md  algebra-introduction.md  algebra-introduction.qmd  calculus-derivatives.Rmd  calculus-derivatives.md  calculus-introduction.Rmd  combinatorics-introduction.md  combinatorics-introduction.qmd  functions-draft.Rmd  functions-introduction.Rmd  functions-introduction.html  functions-introduction.md  functions-introduction.qmd  linear_algebra-linear_systems.Rmd  linear_algebra-matrices.Rmd  (+28 more)
