[tool.poetry]
name = "introductory_maths"
version = "0.1.0"
description = ""
authors = ["ErikaDuan <erika.duan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
